# SponCom

./: LICENSE  README.md  pyproject.toml
src/sponcom/: __init__.py  cli.py  database.py  models.py  schema_builder.py
