[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sponcom"
authors = [{name = "Glyph", email = "code@glyph.im"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
  "click",
]

[project.scripts]
sponcom = "sponcom.cli.main"

[project.urls]
Home = "https://glyph.im/sponcom/"
